# Mamba

./: .clippy.toml  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  test_debug.rs  test_indent.mamba  test_unpacking.py
.github/: copilot-instructions.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/benches/: lexer_benchmarks.rs  parser_benchmarks.rs
crates/parser/examples/: debug_indent.rs  lex_demo.rs
crates/parser/fuzz/: .gitignore  Cargo.toml
crates/parser/fuzz/corpus/fuzz_identifiers/: identifiers.txt
crates/parser/fuzz/corpus/fuzz_lexer/: function.txt
crates/parser/fuzz/corpus/fuzz_numbers/: numbers.txt
crates/parser/fuzz/corpus/fuzz_strings/: strings.txt
crates/parser/fuzz/fuzz_targets/: fuzz_identifiers.rs  fuzz_lexer.rs  fuzz_numbers.rs  fuzz_strings.rs
crates/parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  symbol_table.rs  token.rs  types.rs
crates/parser/tests/: class_decorators_tests.rs  compound_operators_test.rs  error_messages_tests.rs  error_recovery_tests.rs  error_suggestions_tests.rs  indentation_tests.rs  lexer_tests.rs  metaclass_tests.rs  parser_tests.rs  property_tests.proptest-regressions  property_tests.rs  token_tests.rs  unicode_tests.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: lib.rs
crates/transpiler/: Cargo.toml
crates/transpiler/src/: lib.rs
docs/: .temp_control_flow_plan.md  .temp_function_plan.md  ABOUT.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  FUZZING.md  ROADMAP.md
docs/devs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
examples/: test_indentation.mmb  test_lexer.mmb
