[package]
name = "mamba-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mamba-error = { path = "../error" }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
