[workspace]

[package]
name = "mamba-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mamba-parser]
path = ".."

# Fuzz Targets

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_numbers"
path = "fuzz_targets/fuzz_numbers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_strings"
path = "fuzz_targets/fuzz_strings.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_identifiers"
path = "fuzz_targets/fuzz_identifiers.rs"
test = false
doc = false
bench = false
